@@ -1,3 +1,9 @@
+import net.bramp.ffmpeg.FFmpeg;
+import net.bramp.ffmpeg.FFmpegExecutor;
+import net.bramp.ffmpeg.FFprobe;
+import net.bramp.ffmpeg.builder.FFmpegBuilder;
+import net.bramp.ffmpeg.probe.FFmpegProbeResult;
+
 import java.io.BufferedOutputStream;
 import java.io.File;
 import java.io.FileOutputStream;
@@ -21,13 +27,13 @@ public class ConsumerThread {
 
                     if (filename != null && !buffer.isEmpty())
                     {
-                        StatusCode statusCode = buffer.getFirst().getStatusCode();
+                        StatusCode statusCode = buffer.get(0).getStatusCode();
 
                         // if request
                         if (statusCode == StatusCode.REQUEST)
                         {
-                            fileOutputStream.write(buffer.getFirst().getBytesToSendArray());
-                            currentBytesReceived += buffer.getFirst().getBytesToSendArray().length;
+                            fileOutputStream.write(buffer.get(0).getBytesToSendArray());
+                            currentBytesReceived += buffer.get(0).getBytesToSendArray().length;
                             modifyBuffer(ModifyBufferType.POP, null);
                         }
 
@@ -35,11 +41,42 @@ public class ConsumerThread {
                         else if (statusCode == StatusCode.FILE_COMPLETE)
                         {
                             // file size is sent from producer to check if file is not corrupted
-                            if (buffer.getFirst().getByteSize() == currentBytesReceived){
-                                System.out.println("Successfully received file: " + filename);
+                            if (buffer.get(0).getByteSize() == currentBytesReceived){
+                                System.out.println("[File Downloaded] Successfully received file: " + filename + ". Compressing");
+
+                                FFmpeg ffmpeg = new FFmpeg(System.getProperty("user.dir") + "\\ffmpeg\\bin\\ffmpeg");
+                                FFprobe ffprobe = new FFprobe(System.getProperty("user.dir") + "\\ffmpeg\\bin\\ffprobe");
+
+// Input File
+                                String inputFile = System.getProperty("user.dir") + "\\output\\" + filename;
+                                String outputFile = System.getProperty("user.dir") + "\\output\\compressed\\" + filename;
+
+// Probe Video
+                                FFmpegProbeResult probeResult = ffprobe.probe(inputFile);
+
+                                FFmpegBuilder builder = new FFmpegBuilder()
+                                        .setInput(probeResult)    // Input file
+                                        .overrideOutputFiles(true) // Override existing files
+                                        .addOutput(outputFile)  // Output file
+                                        .setFormat("mp4")  // Output format
+                                        .setVideoCodec("libx264") // Codec
+                                        .setVideoBitRate(1_000_000) // Set a lower video bitrate (1Mbps)
+                                        .setAudioCodec("aac") // Audio codec
+                                        .setAudioBitRate(128_000) // Reduce audio bitrate to 128kbps
+                                        .setVideoFrameRate(30, 1) // Ensure a proper frame rate
+                                        .addExtraArgs("-preset", "slow")  // Slower preset = better compression
+                                        .addExtraArgs("-crf", "28")  // Lower CRF = better quality, higher = better compression
+                                        .done();  // Finalizes the output
+
+                                FFmpegExecutor executor = new FFmpegExecutor(ffmpeg, ffprobe);
+
+// Run FFmpeg
+                                executor.createJob(builder).run();
+                                System.out.println("[Compression] File finished compressing: " + filename);
+
                             }
                             else {
-                                System.out.println("Error receiving file: " + filename);
+                                System.out.println("[Error] Error receiving file: " + filename);
                             }
                             fileOutputStream.close();
                             cleanUpAfterDownloadingFile();
@@ -95,6 +132,7 @@ public class ConsumerThread {
             }
             
             fileOutputStream = new FileOutputStream(file, false);
+
             // this.producerThreadAssigned = producerThreadAssigned;
         } catch (Exception e) {
             throw new RuntimeException(e);
@@ -129,7 +167,7 @@ public class ConsumerThread {
 
         // delete
         else if (type == ModifyBufferType.POP) {
-            buffer.removeFirst();
+            buffer.remove(0);
         }
 
 
